correct contrast, title and black hat

--- a/style.css
+++ b/style.css
@@ -779,9 +779,9 @@ h4 {
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
-
+/*change color to white*/
 .tc-white {
-    color: #364577!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
